colorir palavras reservadas(ainda em progresso), adicionada mais palavras reservadas e iniciacao do 'editor de codigo'

--- a/style.css
+++ b/style.css
@@ -29,3 +29,13 @@
   height: 400px;
   border: 1px solid gray;
 }
+
+#content {
+  padding-top: 10px;
+  font-size: 12px;
+  overflow: auto;
+}
+
+#content::-webkit-scrollbar {
+  width: 5px;
+}
