--- a/style.css
+++ b/style.css
@@ -31,11 +31,20 @@
 }
 
 #content {
-  padding-top: 10px;
-  font-size: 12px;
+  padding-left: 5px;
+  font-size: 16px;
+  background-color: rgb(63, 63, 63);
+  color: #fff;
   overflow: auto;
+  outline:none;
+  border-bottom-left-radius: 10px;
+  border-top-left-radius: 10px;
 }
 
 #content::-webkit-scrollbar {
   width: 5px;
+}
+#content::-webkit-scrollbar-thumb {
+  border-radius: 15px;
+  background-color: gray;
 }
