--- a/style.css
+++ b/style.css
@@ -1,9 +1,3 @@
-.textarea-codigo {
-  resize: none;
-  width: 100%;
-  height: 500px;
-}
-
 .navbar-background {
   color: #fff;
   background-color: purple;
@@ -13,6 +7,8 @@
   background-color: #000;
   border: 2px solid darkgray;
   overflow: auto;
+  border-bottom-right-radius: 10px;
+  width: 100%;
   height: 100px;
 }
 
@@ -27,11 +23,14 @@
 
 #campo-codigoJs{
   height: 400px;
+  border-top-right-radius: 10px;
   border: 1px solid gray;
+  color: #000;
 }
 
 #content {
-  padding-left: 5px;
+  padding-left: 10px;
+  padding-top: 5px;
   font-size: 16px;
   background-color: rgb(63, 63, 63);
   color: #fff;
@@ -48,3 +47,4 @@
   border-radius: 15px;
   background-color: gray;
 }
+
