--- a/style.css
+++ b/style.css
@@ -1,6 +1,10 @@
 .navbar-background {
   color: #fff;
-  background-color: purple;
+  background-color: #33DBDF;
+}
+
+div[contenteditable="true"]:focus>div:hover {
+  background-color: rgb(82, 82, 82);
 }
 
 #console-erro {
@@ -21,23 +25,45 @@
   background-color: gray;
 }
 
-#campo-codigoJs {
-  height: 400px;
-  border-top-right-radius: 10px;
-  border: 1px solid gray;
-  color: #000;
-}
 
 #content {
-  padding-left: 10px;
-  padding-top: 5px;
+  height: 500px;
+  width: calc(100% - 35px);
   font-size: 16px;
   background-color: rgb(63, 63, 63);
-  color: #fff;
+  color: rgb(156, 220, 254);
   overflow: auto;
   outline: none;
+  display: inline-block;
+  position: absolute;
+}
+
+.content-header {
+  background-color: rgb(36, 36, 36);
+  color: #fff;
+  cursor: pointer;
+  width: 100%;
+  text-align: center;
+  line-height: 35px;
+  vertical-align: middle;
+  height: 35px;
+}
+
+.content-header:hover {
+  color: #ffc
+}
+
+#content-lateral {
   border-bottom-left-radius: 10px;
-  border-top-left-radius: 10px;
+  padding-left: 5px;
+  height: 500px;
+  font-size: 16px;
+  width: 35px;
+  position: relative;
+  display: inline-block;
+  color: rgb(155, 155, 155);
+  border-top: 1px rgb(60, 60, 60) solid;
+  background-color: rgb(36, 36, 36);
 }
 
 #content::-webkit-scrollbar {
@@ -49,6 +75,22 @@
   background-color: gray;
 }
 
+.codigoJs-header {
+  background-color: rgb(250, 250, 0);
+  border-top-right-radius: 10px;
+  color: #000;
+  width: 100%;
+  text-align: center;
+  line-height: 35px;
+  vertical-align: middle;
+  height: 35px;
+}
+
+#campo-codigoJs {
+  height: 400px;
+  border: 1px solid gray;
+  color: #000;
+}
 
 .palavras-reservadas-titulo {
   background-color: darkgrey;
