--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 .navbar-background {
   color: #fff;
-  background-color: #33DBDF;
+  background-color: rgb(36, 36, 36);
 }
 
 div[contenteditable="true"]:focus>div:hover {
@@ -52,18 +52,26 @@ div[contenteditable="true"]:focus>div:hover {
 .content-header:hover {
   color: #ffc
 }
+#content-lateral div {
+  padding-right: 5px;
+}
 
 #content-lateral {
   border-bottom-left-radius: 10px;
-  padding-left: 5px;
   height: 500px;
   font-size: 16px;
   width: 35px;
+  overflow: auto;
   position: relative;
+  text-align: right;
   display: inline-block;
   color: rgb(155, 155, 155);
   border-top: 1px rgb(60, 60, 60) solid;
   background-color: rgb(36, 36, 36);
+}
+
+#content-lateral::-webkit-scrollbar {
+  width: 0px;
 }
 
 #content::-webkit-scrollbar {
