--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 .navbar-background {
   color: #fff;
-  background-color: rgb(36, 36, 36);
+  background-color: rgb(82, 82, 82);
 }
 
 div[contenteditable="true"]:focus>div:hover {
@@ -61,7 +61,7 @@ div[contenteditable="true"]:focus>div:hover {
   height: 500px;
   font-size: 16px;
   width: 35px;
-  overflow: auto;
+  overflow: hidden;
   position: relative;
   text-align: right;
   display: inline-block;
@@ -98,6 +98,17 @@ div[contenteditable="true"]:focus>div:hover {
   height: 400px;
   border: 1px solid gray;
   color: #000;
+  overflow: auto;
+  padding: 0px 5px;
+}
+
+#campo-codigoJs::-webkit-scrollbar {
+  width: 5px;
+}
+
+#campo-codigoJs::-webkit-scrollbar-thumb {
+  border-radius: 15px;
+  background-color: gray;
 }
 
 .palavras-reservadas-titulo {
@@ -115,4 +126,18 @@ div[contenteditable="true"]:focus>div:hover {
   border-bottom-left-radius: 10px;
   margin-bottom: 20px;
   padding: 10px 0px;
+}
+
+@media(max-width: 575px) {
+  .codigoJs-header {
+    border-radius: 0px;
+  }
+
+  #console-erro {
+    border-radius: 0px;
+  }
+
+  #content-lateral {
+    border-radius: 0px;
+  }
 }
